--- a/4.html
+++ b/4.html
@@ -30,7 +30,7 @@
 <h5>&nbsp;&nbsp;사토 가쓰아키</h5>
 
 <ul> <!--unodered list--> 
-    <li><a href="">valueism</a></li>
+    <li><a href="time.hwp">타임매니저를 사용하시려면 여기를 누르세요. ^^</a></li>
 </ul>    
     
     
